feat: convert posters to webp
